# cses

./: .gitignore  CMakeLists.txt  README.md  build.sh  cses_test_runner.py
.run/: 001_weird_algorithm.run.xml  1068_weird_algorithm.run.xml  Template Python.run.xml
problems/01_introduction_problems/: 002_missing_number.cpp  003_repetitions.cpp  006_number_spiral.cpp  1068_weird_algorithm.cpp  1070_permutations.cpp  1072_two_knights.cpp  1092_two_sets.cpp  1617_bit_strings.cpp  1618_trailing_zeros.cpp
problems/a_intro/: 004_increasing_array.cpp
tests/01_introduction_problems/: 1072_two_knights.py  1083_missing_number.py  1092_two_sets.py  1617_bit_strings.py  1618_trailing_zeros.py
tests/a_intro/: 001_weird_algorithm.py  003_repetitions.py  004_increasing_array.py  005_permutations.py  1071_number_spiral.py
